--- a/index.css
+++ b/index.css
@@ -102,11 +102,15 @@
 }
 
 body{
-    background-color: black;
-    color: white;
+    background-color: white;
+    color: black;
     margin: 0;
     padding: 0;
     font-family: 'Work Sans', sans-serif;
+}
+
+p{
+    font-weight: bold;
 }
 
 .nav{
@@ -122,6 +126,7 @@ body{
 #motto{
     margin: 0;
     text-align: center;
+    color: #8000ff;
 }
 
 #wicon{
@@ -132,7 +137,7 @@ body{
     padding: 10px 0px 0px 15px;
 }
 
-#carticon{
+#bagicon{
     width: 40px;
     padding-top: 10px;
     padding-right: 15px;
@@ -174,6 +179,7 @@ body{
 .hr1, .hr2{
     padding: 30px;
     width: 450px;
+    color: #8000ff;
 }
 
 .cards{
@@ -185,12 +191,15 @@ body{
     width: 350px;
     height: 600px;
     margin: 20px;
+    text-align: center;
 }
 
 .cardz img{
     width: 100%;
     height: 450px;
     transition: transform .5s ease-in-out;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .cardz img:hover{
@@ -204,14 +213,24 @@ button{
     padding: 20px;
     width: 150px;
     border-color: transparent;
-    border: 1px solid white;
     font-family: 'Work Sans', sans-serif;
     font-weight: bold;
+    background-color: #8000ff;
+    border-radius: 5px;
+    transition: 0.2s all;
+    cursor: pointer;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 button:hover{
-    background-color: white;
-    color: black;
+    background-color: #4d0099;
+    color: white;
+}
+
+button:active{
+    transform: translateY(-3px);
+    box-shadow: 3px 2px 22px 1px rgba(0, 0, 0, 0.24);
+    background-color: #4d0099;
 }
 
 .ctxt2{
@@ -235,6 +254,10 @@ button:hover{
     padding: 30px;
 }
 
+hr{
+    border: 0.01px solid #8000ff;
+}
+
 .item{
     display: flex;
     width: 100%;
@@ -249,7 +272,9 @@ button:hover{
 .itema img{
     width: 330px;
     height: 450px;
-    padding-top: 50px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border-radius: 10px;
+    margin-top: 50px;
 }
 
 .info{
@@ -282,32 +307,33 @@ button:hover{
 
 input{
     background-color: transparent;
-    border: 1px solid white;
+    border: 1px solid black;
     margin: 15px 0px 20px 0px;
     padding: 20px;
     width: 250px;
     height: 10px;
-    color: white;
+    color: black;
     font-family: 'Work Sans', sans-serif;
+    border-radius: 5px;
 }
 
 input::placeholder{
     font-family: 'Work Sans', sans-serif;
-    color: white;
-}
-
-#sub{
-    background-color: white;
     color: black;
 }
 
+#sub{
+    background-color: #8000ff;
+    color: white;
+}
+
 #sub:hover{
-    background-color: black;
+    background-color: #4d0099;
     color: white;
 }
 
 .ftr a{
-    color: white;
+    color: black;
     text-decoration: none;
 }
 
@@ -321,6 +347,10 @@ input::placeholder{
 }
 
 .icon{
-    width: 20px;
+    width: 25px;
     padding: 0px 20px 0px 0px;
+}
+
+#about{
+    color: #8000ff;
 }
